--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-md-6 col-md-offset-3 text-center">
             <a href="index.html#about" class="scrollto wow fadeInUp delay-5s ">
               <p>SEE MORE</p>
-              <p class="scrollto--arrow"><img src="/personal-website/img/h1-bg.png" alt="scroll down arrow"></p>
+              <p class="scrollto--arrow"><img src="img/h1-bg.png" alt="scroll down arrow"></p>
             </a>
           </div>
         </div>
@@ -261,7 +261,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/playbutton.jpg" data-lightbox="roadtrip"
+            <a href="img/bvc-pics/playbutton.jpg" data-lightbox="roadtrip"
               title="BODHI TECH TALKS-Youtube channel">
               <img class="grayscale" src="/personal-website/img/bvc-pics/playb2-removebg-thumb.png"
                 alt="Portfolio Item">
@@ -277,9 +277,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/sk.jpg" data-lightbox="roadtrip"
+            <a href="img/bvc-pics/sk.jpg" data-lightbox="roadtrip"
               title="fb-Page MY PENCIL ART BODHEESH VC "><img class="grayscale"
-                src="/personal-website/img/bvc-pics/tovino-resize.jpg" alt="Portfolio Item"></a>
+                src="img/bvc-pics/tovino-resize.jpg" alt="Portfolio Item"></a>
           </div>
         </div>
       </div>
@@ -289,9 +289,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/WOODLAND.png" data-lightbox="roadtrip"
+            <a href="img/bvc-pics/WOODLAND.png" data-lightbox="roadtrip"
               title="Woodland-Static_Website"><img class="grayscale"
-                src="/personal-website/img/bvc-pics/WOODLANDTHUMBNAIL.png" alt="Portfolio Item"></a>
+                src=img/bvc-pics/WOODLANDTHUMBNAIL.png" alt="Portfolio Item"></a>
           </div>
         </div>
       </div>
@@ -301,8 +301,8 @@
       <div class="col-md-3 col-sm-6 ">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/SWIGGY2.png" data-lightbox="roadtrip"
-              title="Swiggy-Static_Website"><img class="grayscale" src="/personal-website/img/bvc-picS/SWIGGY3.png"
+            <a href="img/bvc-pics/SWIGGY2.png" data-lightbox="roadtrip"
+              title="Swiggy-Static_Website"><img class="grayscale" src="img/bvc-picS/SWIGGY3.png"
                 alt="Portfolio Item"></a>
           </div>
         </div>
@@ -313,8 +313,8 @@
       <div class="col-md-3 col-sm-6 ">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/elephant.jpg" data-lightbox="roadtrip" title="Sculpture-clay"><img
-                class="grayscale" src="/personal-website/img/bvc-pics/elephant-THUMB.jpg" alt="Portfolio Item"></a>
+            <a href="img/bvc-pics/elephant.jpg" data-lightbox="roadtrip" title="Sculpture-clay"><img
+                class="grayscale" src="img/bvc-pics/elephant-THUMB.jpg" alt="Portfolio Item"></a>
           </div>
         </div>
       </div>
@@ -324,8 +324,8 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/kajal-1.jpeg" data-lightbox="roadtrip"
-              title="kAJAL- Pencil drawing"><img class="grayscale" src="/personal-website/img/bvc-pics/kajal-thumb.jpg"
+            <a href="img/bvc-pics/kajal-1.jpeg" data-lightbox="roadtrip"
+              title="kAJAL- Pencil drawing"><img class="grayscale" src="img/bvc-pics/kajal-thumb.jpg"
                 alt="Portfolio Item"></a>
           </div>
         </div>
@@ -336,8 +336,8 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/eeee.jpeg" data-lightbox="roadtrip" title="Macro-photography"><img
-                class="grayscale" src="/personal-website/img/bvc-pics/eeee1.jpeg" alt="Portfolio Item"></a>
+            <a href="img/bvc-pics/eeee.jpeg" data-lightbox="roadtrip" title="Macro-photography"><img
+                class="grayscale" src="img/bvc-pics/eeee1.jpeg" alt="Portfolio Item"></a>
           </div>
         </div>
       </div>
@@ -347,8 +347,8 @@
       <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
           <div class="img">
-            <a href="/personal-website/img/bvc-pics/shincy-1.jpeg" data-lightbox="roadtrip"
-              title="Digital- Painting"><img class="grayscale" src="/personal-website/img/bvc-pics/shincy1122.jpeg"
+            <a href="img/bvc-pics/shincy-1.jpeg" data-lightbox="roadtrip"
+              title="Digital- Painting"><img class="grayscale" src="img/bvc-pics/shincy1122.jpeg"
                 alt="Portfolio Item"></a>
           </div>
         </div>
