--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <!-- FlexSlider -->
   <link href="assets/flexslider/flexslider.css" rel="stylesheet">
   <!-- Theme Style -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <!-- Animations -->
-  <link href="css/animate.css" rel="stylesheet">
+  <link href="animate.css" rel="stylesheet">
   <!-- Custom Favicon -->
   <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -263,7 +263,7 @@
           <div class="img">
             <a href="img/bvc-pics/playbutton.jpg" data-lightbox="roadtrip"
               title="BODHI TECH TALKS-Youtube channel">
-              <img class="grayscale" src="/personal-website/img/bvc-pics/playb2-removebg-thumb.png"
+              <img class="grayscale" src="img/bvc-pics/playb2-removebg-thumb.png"
                 alt="Portfolio Item">
 
             </a>
